Fixed conflicts with our tests
* adjusted gameboard to accomodate cards
* adjusted cards to implement actions for each card
* fixed our tests not running